<?xml version="1.0"?>
<resources>
    <string name="app_name">eatsy</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="try_now">Try Now!</string>
    <string name="next">next</string>
    <string name="username">Γιώργος Παπαδόπουλος</string>
    <string name="mylist">Η λίστα μου</string>
    <string name="mycalendar">Ημερολόγιο</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="favorite">Προτιμήσεις</string>
    <string name="setmarks">Ορισμός Στόχων</string>
    <string name="setaccount">Ρυθμίσεις Λογαριασμού</string>
    <string name="upgrade">Αναβάθμιση</string>
    <string name="faq">FAQ</string>
    <string name="terms">Όροι Χρήσης</string>
    <string name="needs">Ανάγκες</string>
    <string name="illness">Παθήσεις</string>
    <string name="allergy">Αλεργία</string>
    <string name="intolerance">Δυσανεξία</string>
    <string name="sensitivity">Ευαισθησία</string>
    <string name="dislike">Δε μου αρέσουν</string>
    <string name="title_activity_login">SignUp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
</resources>
