<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="17dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/settings"
                    android:textSize="22dp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="#3b984b" />

                <LinearLayout
                    android:id="@+id/favorite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#bbbbbb"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="17dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/favorite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/favorite"
                        android:textSize="22dp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="187dp"
                android:background="#3b984b" />

            <LinearLayout
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="horizontal"
                android:padding="9dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/account" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setaccount"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/goals"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="#503b984b"
                android:orientation="horizontal"
                android:padding="9dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/mark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setmarks"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/upgrade"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="horizontal"
                android:padding="9dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/upgrade" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/upgrade"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="#503b984b"
                android:orientation="horizontal"
                android:padding="9dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/faq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/faq"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="horizontal"
                android:padding="9dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/terms" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/terms"
                    android:textSize="22dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#00ffffff"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/goToWeeklyProgram"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="#00ffffff"
            android:scaleType="fitXY"
            android:src="@drawable/food" />

        <ImageButton
            android:id="@+id/goToProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="18dp"
            android:background="#00ffffff"
            android:scaleType="fitXY"
            android:src="@drawable/profle" />

        <ImageButton
            android:id="@+id/goToExercise"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="8dp"
            android:background="#00ffffff"
            android:scaleType="fitXY"
            android:src="@drawable/football" />
    </LinearLayout>
</RelativeLayout>