<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="#703b984b"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/person" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/username"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3b984b" />

            <LinearLayout
                android:id="@+id/usergoal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="false"
                    android:text="Αρχικό Βάρος:\n\t\t\t90kg"
                    android:textSize="18dp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="#3b984b" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="false"
                    android:text="Στόχος Βάρους:\n\t\t\t50kg"
                    android:textSize="18dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3b984b" />

            <LinearLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="#333b984b"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/product" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/mylist"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3b984b" />

            <LinearLayout
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="#503b984b"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/calendar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/mycalendar"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3b984b" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#00ffffff"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/goToWeeklyProgram"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="#00ffffff"
            android:scaleType="fitXY"
            android:src="@drawable/food" />

        <ImageButton
            android:id="@+id/goToSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="18dp"
            android:src="@drawable/gear"
            android:background="#00ffffff"
            android:scaleType="fitXY"/>


        <ImageButton
            android:id="@+id/goToExercise"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/football"
            android:background="#00ffffff"
            android:scaleType="fitXY"/>
    </LinearLayout>
</RelativeLayout>